[gd_scene load_steps=75 format=2]

[ext_resource path="res://scenes/formulaire.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/backgrounds/bureau_3.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/backgrounds/bureau_1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/backgrounds/bureau_2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/formulaire/GA_bouton_texte-s_25022022.svg" type="Texture" id=5]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_fenetre_02032022.svg" type="Texture" id=6]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_portrait_f_s_02032022.svg" type="Texture" id=7]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_portrait_h_02032022.svg" type="Texture" id=8]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_portrait_h_s_02032022.svg" type="Texture" id=9]
[ext_resource path="res://assets/fonts/main_font.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_portrait_h_c_02032022.svg" type="Texture" id=11]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_bouton_vide_02032022.svg" type="Texture" id=12]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_bouton_texte_02032022.svg" type="Texture" id=13]
[ext_resource path="res://assets/sprites/formulaire/GA_bouton_texte-c_25022022.svg" type="Texture" id=14]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_portrait_f_02032022.svg" type="Texture" id=15]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_bouton_bureau_02032022.svg" type="Texture" id=16]
[ext_resource path="res://assets/sprites/formulaire/GA_bouton_retour_s_25022022.svg" type="Texture" id=17]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_portrait_f_c_02032022.svg" type="Texture" id=18]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_fenetre_erreur_02032022.svg" type="Texture" id=19]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_bouton_vide_s_02032022.svg" type="Texture" id=20]
[ext_resource path="res://themes/formulaire.tres" type="DynamicFont" id=24]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_bouton_bureau_s_02032022.svg" type="Texture" id=25]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_bouton_bureau_c_02032022.svg" type="Texture" id=26]
[ext_resource path="res://assets/sprites/nouveau_formulaire/GA_bouton_vide_c_02032022.svg" type="Texture" id=27]
[ext_resource path="res://assets/sprites/formulaire/GA_bouton_continuer_25022022.svg" type="Texture" id=30]
[ext_resource path="res://assets/sprites/formulaire/GA_bouton_continuer_s_25022022.svg" type="Texture" id=31]
[ext_resource path="res://assets/sprites/formulaire/GA_bouton_continuer_c_25022022.svg" type="Texture" id=32]
[ext_resource path="res://assets/sprites/formulaire/GA_bouton_retour_25022022.svg" type="Texture" id=36]
[ext_resource path="res://assets/sprites/formulaire/GA_bouton_retour_c_25022022.svg" type="Texture" id=37]

[sub_resource type="StreamTexture" id=7]
flags = 4
load_path = "res://.import/GA_bureau_pc_22022022.png-bcdead45cf9b2d6e047977d2dc0243c1.stex"

[sub_resource type="StyleBoxTexture" id=1]
texture = SubResource( 7 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 458, 558 )

[sub_resource type="Theme" id=16]
default_font = ExtResource( 24 )

[sub_resource type="StyleBoxTexture" id=35]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 220, 12 )

[sub_resource type="StyleBoxTexture" id=31]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 220, 12 )

[sub_resource type="StyleBoxTexture" id=33]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 220, 12 )

[sub_resource type="StyleBoxTexture" id=34]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 220, 12 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 159, 253 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 159, 253 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 159, 253 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 159, 253 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 159, 253 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 159, 253 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 32 )
region_rect = Rect2( 0, 0, 75, 24 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 31 )
region_rect = Rect2( 0, 0, 75, 24 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 30 )
region_rect = Rect2( 0, 0, 232, 78 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 458, 558 )

[sub_resource type="StyleBoxTexture" id=40]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 369, 137 )

[sub_resource type="StyleBoxTexture" id=41]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 369, 137 )

[sub_resource type="StyleBoxTexture" id=42]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 369, 137 )

[sub_resource type="StyleBoxTexture" id=43]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 369, 137 )

[sub_resource type="StyleBoxTexture" id=44]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 369, 137 )

[sub_resource type="StyleBoxTexture" id=45]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 369, 137 )

[sub_resource type="StyleBoxTexture" id=46]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 369, 137 )

[sub_resource type="StyleBoxTexture" id=47]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 369, 137 )

[sub_resource type="StyleBoxTexture" id=48]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 369, 137 )

[sub_resource type="StyleBoxTexture" id=49]
texture = ExtResource( 37 )
region_rect = Rect2( 0, 0, 75, 24 )

[sub_resource type="StyleBoxTexture" id=50]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 75, 24 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 36 )
region_rect = Rect2( 0, 0, 232, 78 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 32 )
region_rect = Rect2( 0, 0, 75, 24 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 31 )
region_rect = Rect2( 0, 0, 75, 24 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 30 )
region_rect = Rect2( 0, 0, 232, 78 )

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 458, 558 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 27 )
region_rect = Rect2( 0, 0, 150, 45 )

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 150, 45 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 150, 45 )

[sub_resource type="StyleBoxTexture" id=28]
texture = ExtResource( 27 )
region_rect = Rect2( 0, 0, 150, 45 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 150, 45 )

[sub_resource type="StyleBoxTexture" id=30]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 150, 45 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=39]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 438, 226 )

[sub_resource type="StyleBoxTexture" id=36]
texture = ExtResource( 27 )
region_rect = Rect2( 0, 0, 150, 45 )

[sub_resource type="StyleBoxTexture" id=37]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 150, 45 )

[sub_resource type="StyleBoxTexture" id=38]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 150, 45 )

[node name="formulaire" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.470276
margin_top = 1.4108
margin_right = 0.470215
margin_bottom = 1.41077
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="."]
margin_left = -0.470276
margin_top = -2.4108
margin_right = 1023.53
margin_bottom = 597.589
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_part1" type="Panel" parent="."]
margin_left = 287.0
margin_top = 7.0
margin_right = 735.0
margin_bottom = 565.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel_part1"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 20.0
margin_top = 35.0
margin_right = 275.0
margin_bottom = 80.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 10 )
text = "FORMULAIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="Panel_part1"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 36.0
margin_top = 96.5892
margin_right = 486.0
margin_bottom = 141.589
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 10 )
text = "QUEL EST LE NOM DE CE MAIRE ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nom" type="LineEdit" parent="Panel_part1/label"]
margin_left = -29.0
margin_top = 50.0
margin_right = 641.0
margin_bottom = 97.0
focus_neighbour_top = NodePath("../../label3/nom_ville")
focus_next = NodePath("../../label3/nom_ville")
theme = SubResource( 16 )
custom_colors/selection_color = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 31 )
context_menu_enabled = false
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label3" type="Label" parent="Panel_part1"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 35.5297
margin_top = 149.589
margin_right = 553.53
margin_bottom = 182.589
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 10 )
text = "QUEL EST LE NOM DE CETTE VILLE ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nom_ville" type="LineEdit" parent="Panel_part1/label3"]
margin_left = -28.0
margin_top = 44.0
margin_right = 642.0
margin_bottom = 91.0
custom_colors/selection_color = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/focus = SubResource( 33 )
custom_styles/normal = SubResource( 34 )
context_menu_enabled = false
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="def_femme" type="Button" parent="Panel_part1"]
margin_left = 54.0
margin_top = 242.589
margin_right = 213.0
margin_bottom = 495.589
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="def_homme" type="Button" parent="Panel_part1"]
margin_left = 235.0
margin_top = 242.589
margin_right = 394.0
margin_bottom = 495.589
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sexe" type="Label" parent="Panel_part1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 116.53
margin_top = 207.589
margin_right = 574.53
margin_bottom = 252.589
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 10 )
text = "SEXE DU PERSONNAGE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="Button" parent="Panel_part1"]
margin_left = 326.0
margin_top = 512.0
margin_right = 442.0
margin_bottom = 551.0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_part2" type="Panel" parent="."]
visible = false
margin_left = 287.0
margin_top = 7.0
margin_right = 735.0
margin_bottom = 565.0
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="Label" parent="Panel_part2"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 17.5297
margin_top = 33.5892
margin_right = 567.53
margin_bottom = 78.5892
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 10 )
text = "Quel bureau souhaitez-vous ?"

[node name="bureau1" type="Button" parent="Panel_part2"]
margin_left = 41.5297
margin_top = 67.5892
margin_right = 410.53
margin_bottom = 204.589
custom_styles/hover = SubResource( 40 )
custom_styles/pressed = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel_part2/bureau1"]
position = Vector2( 184.521, 70.6259 )
scale = Vector2( 0.114402, 0.114402 )
texture = ExtResource( 3 )

[node name="bureau2" type="Button" parent="Panel_part2"]
margin_left = 41.5297
margin_top = 209.589
margin_right = 410.53
margin_bottom = 346.589
custom_styles/hover = SubResource( 43 )
custom_styles/pressed = SubResource( 44 )
custom_styles/normal = SubResource( 45 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel_part2/bureau2"]
position = Vector2( 185, 71.0001 )
scale = Vector2( 0.114583, 0.093085 )
texture = ExtResource( 4 )

[node name="bureau3" type="Button" parent="Panel_part2"]
margin_left = 41.5297
margin_top = 357.589
margin_right = 410.53
margin_bottom = 494.589
custom_styles/hover = SubResource( 46 )
custom_styles/pressed = SubResource( 47 )
custom_styles/normal = SubResource( 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel_part2/bureau3"]
position = Vector2( 185.104, 67.9763 )
scale = Vector2( 0.0529472, 0.0520555 )
texture = ExtResource( 2 )

[node name="return_panel_part2" type="Button" parent="Panel_part2"]
margin_left = 18.0
margin_top = 512.589
margin_right = 134.0
margin_bottom = 551.589
custom_styles/hover = SubResource( 49 )
custom_styles/pressed = SubResource( 50 )
custom_styles/normal = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_panel_part2" type="Button" parent="Panel_part2"]
margin_left = 325.53
margin_top = 511.589
margin_right = 441.53
margin_bottom = 550.589
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_confirmation" type="Panel" parent="."]
visible = false
margin_left = 287.0
margin_top = 8.0
margin_right = 735.0
margin_bottom = 566.0
custom_styles/panel = SubResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel_confirmation"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 20.0
margin_top = 35.0
margin_right = 183.0
margin_bottom = 80.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 10 )
text = "Résumé:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panel_confirmation"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 20.0
margin_top = 317.589
margin_right = 167.0
margin_bottom = 362.589
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 10 )
text = "Bureau:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fond" type="Sprite" parent="Panel_confirmation"]
position = Vector2( 202.405, 140.995 )
scale = Vector2( 0.509084, 1.04899 )
texture = ExtResource( 13 )

[node name="fond2" type="Sprite" parent="Panel_confirmation"]
position = Vector2( 202.53, 210.495 )
scale = Vector2( 0.509448, 0.967906 )
texture = ExtResource( 13 )

[node name="fond3" type="Sprite" parent="Panel_confirmation"]
position = Vector2( 202.53, 278.495 )
scale = Vector2( 0.509448, 1.02196 )
texture = ExtResource( 13 )

[node name="nom" type="Label" parent="Panel_confirmation"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 42.5297
margin_top = 129.589
margin_right = 140.53
margin_bottom = 174.589
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 10 )
text = "Nom:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ville" type="Label" parent="Panel_confirmation"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 38.5297
margin_top = 266.589
margin_right = 174.53
margin_bottom = 311.589
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 10 )
text = "Ville:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sexe" type="Label" parent="Panel_confirmation"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 38.5297
margin_top = 198.589
margin_right = 174.53
margin_bottom = 243.589
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 10 )
text = "Sexe:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmer" type="Button" parent="Panel_confirmation"]
margin_left = 289.0
margin_top = 441.589
margin_right = 439.0
margin_bottom = 486.589
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel_confirmation/confirmer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.47
margin_top = -17.5
margin_right = 116.53
margin_bottom = 27.5
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 10 )
text = "Confirmer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return_panel_confirmation" type="Button" parent="Panel_confirmation"]
margin_left = 289.0
margin_top = 494.589
margin_right = 439.0
margin_bottom = 539.589
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/normal = SubResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel_confirmation/return_panel_confirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -17.5
margin_right = 79.0
margin_bottom = 27.5
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 10 )
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite_bureau" type="Panel" parent="Panel_confirmation"]
margin_left = 17.5297
margin_top = 371.589
margin_right = 277.529
margin_bottom = 537.589
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_alert" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -113.0
margin_right = 219.0
margin_bottom = 113.0
custom_styles/panel = SubResource( 39 )

[node name="message" type="Label" parent="Panel_alert"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.47
margin_top = -45.4108
margin_right = 393.53
margin_bottom = 146.589
rect_scale = Vector2( 0.75, 0.75 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Pour poursuivre veuillez 
compléter les informations !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return_panel_alert" type="Button" parent="Panel_alert"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -73.4703
margin_top = -48.4108
margin_right = 72.5297
margin_bottom = -6.41077
custom_styles/hover = SubResource( 36 )
custom_styles/pressed = SubResource( 37 )
custom_styles/normal = SubResource( 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel_alert/return_panel_alert"]
anchor_left = 0.5
anchor_top = 0.143
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.4703
margin_top = -3.006
margin_right = 78.5297
margin_bottom = 27.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 10 )
text = "Retour"

[connection signal="text_changed" from="Panel_part1/label/nom" to="." method="_on_nom_text_changed"]
[connection signal="text_changed" from="Panel_part1/label3/nom_ville" to="." method="_on_nom_ville_text_changed"]
[connection signal="pressed" from="Panel_part1/def_femme" to="." method="_on_def_femme_pressed"]
[connection signal="pressed" from="Panel_part1/def_homme" to="." method="_on_def_homme_pressed"]
[connection signal="pressed" from="Panel_part1/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Panel_part2/bureau1" to="." method="_on_bureau1_pressed"]
[connection signal="pressed" from="Panel_part2/bureau2" to="." method="_on_bureau2_pressed"]
[connection signal="pressed" from="Panel_part2/bureau3" to="." method="_on_bureau3_pressed"]
[connection signal="pressed" from="Panel_part2/return_panel_part2" to="." method="_on_return_panel_part2_pressed"]
[connection signal="pressed" from="Panel_part2/next_panel_part2" to="." method="_on_next_panel_part2_pressed"]
[connection signal="pressed" from="Panel_confirmation/confirmer" to="." method="_on_confirmer_pressed"]
[connection signal="pressed" from="Panel_confirmation/return_panel_confirmation" to="." method="_on_return_panel_confirmation_pressed"]
[connection signal="pressed" from="Panel_alert/return_panel_alert" to="." method="_on_return_panel_alert_pressed"]
